# ShaderRenderer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.bat
shaders/: 3d-world-v2.frag.glsl  3d-world-v3.frag.glsl  3d-world.frag.glsl  aurora-snowdrop-lake-v2.frag.glsl  aurora-snowdrop-lake.frag.glsl  beach-life-realistic.frag.glsl  beach-life-v2.frag.glsl  beach-life-v2.vert.glsl  beach-life.frag.glsl  charge-flow.frag.glsl  desert-v2.frag.glsl  desert.frag.glsl  earth-globe-space-v2.frag.glsl  earth-globe-space-v3.frag.glsl  earth-globe-space-v4.frag.glsl  earth-globe-space-v5.frag.glsl  earth-globe-space-v6.comp.glsl  earth-globe-space-v6.frag.glsl  earth-globe-space.frag.glsl  electrical-current.frag.glsl  galaxy-3d.frag.glsl  galaxy-v2.frag.glsl  galaxy-v3.frag.glsl  galaxy-v4.frag.glsl  galaxy-v4.vert.glsl  galaxy.frag.glsl  hello.comp.glsl  icey-river.frag.glsl  lava-timelapse.frag.glsl  lava.frag.glsl  life-game.comp.glsl  life-game.frag.glsl  life-game.vert.glsl  light-flow.frag.glsl  light-flow.vert.glsl  lightning-cloud-sky.frag.glsl  lightning-winter-storm.frag.glsl  mandelbrot.frag.glsl  mandelbrot.vert.glsl  mosfet-simulation.comp.glsl  (+26 more)
src/: app.cpp  app.h  editor.cpp  editor.h  main.cpp  shader.cpp  shader.h
